--- a/elephant-client/pom.xml
+++ b/elephant-client/pom.xml
@@ -8,5 +8,13 @@
     <artifactId>elephant-client</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.0</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
