--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -4,6 +4,6 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/office?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: root
+    password: mv2H)jMs9AFO-gCD
