--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -7,3 +7,13 @@ spring:
     url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8
     username: root
     password: mv2H)jMs9AFO-gCD
+
+  redis:
+    host: 47.92.153.243
+    password:
+     port: 7000
+     pool:
+       max-idle: 100
+       min-idle: 1
+       max-active: 1000
+       max-wait: -1
