--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,19 @@
                 <version>${mybatis-starter.version}</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/com.alibaba.boot/dubbo-spring-boot-starter -->
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>0.2.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.sjhy.platform</groupId>
                 <artifactId>elephant-client</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+
 
         </dependencies>
     </dependencyManagement>
