--- a/elephant-biz/pom.xml
+++ b/elephant-biz/pom.xml
@@ -24,7 +24,12 @@
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>3.1.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.52</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
