--- a/elephant-starter/pom.xml
+++ b/elephant-starter/pom.xml
@@ -29,6 +29,12 @@
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.sjhy.platform</groupId>
+      <artifactId>elephant-service</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
   </dependencies>
 
   <build>
