--- a/elephant-starter/src/main/resources/application.properties
+++ b/elephant-starter/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = root
+
+#logging.level.root=DEBUG
