--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>elephant-service</module>
         <module>elephant-starter</module>
         <module>elephant-biz</module>
+        <module>dubbo-demo-consumer</module>
     </modules>
 
     <dependencyManagement>
@@ -53,6 +54,11 @@
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>0.2.0</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
