--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>0.2.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
