--- a/elephant-biz/pom.xml
+++ b/elephant-biz/pom.xml
@@ -39,6 +39,13 @@
             <groupId>com.sjhy.platform</groupId>
             <artifactId>elephant-persist</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
         </dependency>
     </dependencies>
 
