--- a/elephant-client/pom.xml
+++ b/elephant-client/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.1.3.RELEASE</version>
+            <version>5.0.3.RELEASE</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -70,6 +70,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.7</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.1.2.RELEASE</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
