--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
                 <version>0.2.0</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.json/json -->
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20160810</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -66,7 +73,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.1.3.RELEASE</version>
+            <version>5.0.3.RELEASE</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
