--- a/elephant-biz/pom.xml
+++ b/elephant-biz/pom.xml
@@ -90,15 +90,15 @@
             <artifactId>json</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sjhy.platform</groupId>
-            <artifactId>elephant-biz</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
             <version>2.1.2.RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sjhy.platform</groupId>
+            <artifactId>elephant-client</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
