--- a/elephant-persist/pom.xml
+++ b/elephant-persist/pom.xml
@@ -26,10 +26,10 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.sjhy.platform</groupId>
             <artifactId>elephant-client</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
