--- a/elephant-service/pom.xml
+++ b/elephant-service/pom.xml
@@ -19,12 +19,13 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.sjhy.platform</groupId>
-            <artifactId>elephant-client</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.alibaba.boot</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sjhy.platform</groupId>
+            <artifactId>elephant-client</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
