--- a/elephant-starter/pom.xml
+++ b/elephant-starter/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>elephant-service</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.sjhy.platform</groupId>
+      <artifactId>elephant-client</artifactId>
+      <version>1.2.0-SNAPSHOT</version>
+    </dependency>
 
   </dependencies>
 
