--- a/elephant-biz/pom.xml
+++ b/elephant-biz/pom.xml
@@ -120,11 +120,11 @@
             <artifactId>fst</artifactId>
             <version>2.57</version>
         </dependency>
-        <dependency>
-            <groupId>jcs</groupId>
-            <artifactId>jcs</artifactId>
-            <version>1.3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>jcs</groupId>-->
+            <!--<artifactId>jcs</artifactId>-->
+            <!--<version>1.3</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 </project>
