--- a/elephant-service/pom.xml
+++ b/elephant-service/pom.xml
@@ -18,10 +18,10 @@
             <artifactId>elephant-biz</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba.boot</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba.boot</groupId>-->
+            <!--<artifactId>dubbo-spring-boot-starter</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.sjhy.platform</groupId>
             <artifactId>elephant-client</artifactId>
