--- a/elephant-starter/pom.xml
+++ b/elephant-starter/pom.xml
@@ -39,6 +39,18 @@
       <artifactId>elephant-client</artifactId>
       <version>1.2.0-SNAPSHOT</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.47</version>
+    </dependency>
 
   </dependencies>
 
