--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <version>5.0.3.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sjhy.platform</groupId>
+            <artifactId>elephant-client</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
