--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8443
+  port: 443
   ssl:
       key-store: classpath:1880511_server.shijunhuyu.com.pfx
       key-store-password: KbM4QRIo
@@ -9,10 +9,11 @@ spring:
     active: dev
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    # url: jdbc:mysql://localhost.:3306/game?useUnicode=true&characterEncoding=utf-8
-    url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/game?useUnicode=true&characterEncoding=utf-8
+    # url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: mv2H)jMs9AFO-gCD
+    password: root
+    # password: mv2H)jMs9AFO-gCD
     name: game
 
   redis:
