--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
     password: root
     # password: mv2H)jMs9AFO-gCD
     name: game
+  cache:
+    type: redis
 
   redis:
     host: localhost
@@ -40,3 +42,4 @@ mybatis:
     use-generated-keys: true
     default-executor-type: simple
     default-statement-timeout: 25000
+
