添加新方法，更改返回值为json格式，在不影响驯龙师的前提下对三国使用方法进行复制和修改，添加获取奖牌和购买时商品验证的功能，同时进行返回参数的调试和整合

--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 server:
+#  port: 8080
   port: 443
   ssl:
       key-store: classpath:1880511_server.shijunhuyu.com.pfx
@@ -15,8 +16,6 @@ spring:
     password: root
     # password: mv2H)jMs9AFO-gCD
     name: game
-  cache:
-    type: redis
 
   redis:
     host: localhost
