修改验证商品逻辑

--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-#  port: 8080
-  port: 443
-  ssl:
-      key-store: classpath:1880511_server.shijunhuyu.com.pfx
-      key-store-password: KbM4QRIo
+  port: 8080
+#  port: 443
+#  ssl:
+#      key-store: classpath:1880511_server.shijunhuyu.com.pfx
+#      key-store-password: KbM4QRIo
 
 spring:
   profiles:
