--- a/elephant-starter/src/main/resources/server.properties
+++ b/elephant-starter/src/main/resources/server.properties
@@ -1,34 +1,34 @@
 game.socket.port=10007
-#游戏id,支付系统分配的产品id
+#\u6E38\u620Fid,\u652F\u4ED8\u7CFB\u7EDF\u5206\u914D\u7684\u4EA7\u54C1id
 game.id=1
-#服务器id
+#\u670D\u52A1\u5668id
 server.id=1
-#服务器日志
+#\u670D\u52A1\u5668\u65E5\u5FD7
 server.log.path=f\:md_log
 server.gamedata.path=f\:kairogamedata
-#热更新版本号
+#\u70ED\u66F4\u65B0\u7248\u672C\u53F7
 server.hot.upgrade.version=0.6.0.14
 
-#服务器总人数
+#\u670D\u52A1\u5668\u603B\u4EBA\u6570
 server.total.players=0
 server.close.enter.time=0
 
-#GM管理通讯密钥
+#GM\u7BA1\u7406\u901A\u8BAF\u5BC6\u94A5
 gm.secret.key=MAPPNAAN
 
-#debug设定
+#debug\u8BBE\u5B9A
 server.debug=true
 
-#游戏支付系统请求url
-#game.pay.url=http://127.0.0.1:8080/GamePayServer/businessProcess.do
+#\u6E38\u620F\u652F\u4ED8\u7CFB\u7EDF\u8BF7\u6C42url
+#game.pay.url=http://127.0.0.1:8090/GamePayServer/businessProcess.do
 #game.pay.url=http://online.kairogame.cn:85/GamePayServer/businessProcess.do
 game.pay.url=http://47.92.153.243:85/GamePayServer/businessProcess.do
 game.pay.url.yyb=http://118.89.249.29:85/GamePayServer/businessProcess.do
-#游戏支付系统，加密密钥
+#\u6E38\u620F\u652F\u4ED8\u7CFB\u7EDF\uFF0C\u52A0\u5BC6\u5BC6\u94A5
 game.pay.key=MAPPNAAN
 
 
-#阿里云oss配置
+#\u963F\u91CC\u4E91oss\u914D\u7F6E
 #ali.oss.bucket=kr-game-data3
 #ali.oss.endpoint=http://oss-cn-zhangjiakou.aliyuncs.com
 #ali.oss.endpoint.internal=http://oss-cn-zhangjiakou.aliyuncs.com
@@ -44,10 +44,10 @@ game.pay.key=MAPPNAAN
 #ali.oss.role.write=acs:ram::1132897340899633:role/kairogamedatawriteonly
 #
 #ali.oss.region=cn-beijing
-##key存在时间(秒)
+##key\u5B58\u5728\u65F6\u95F4(\u79D2)
 #ali.oss.duration=20
 
-#阿里云oss配置
+#\u963F\u91CC\u4E91oss\u914D\u7F6E
 #ali.oss.bucket=kr-game-data4
 
 #ali.oss.endpoint=http://oss-cn-zhangjiakou.aliyuncs.com
@@ -64,8 +64,8 @@ game.pay.key=MAPPNAAN
 #ali.oss.role.write=acs:ram::1132897340899633:role/kairogamedatawriteonly
 
 #ali.oss.region=cn-beijing
-#key存在时间(秒)
+#key\u5B58\u5728\u65F6\u95F4(\u79D2)
 #ali.oss.duration=20
 ali.oss.endpoint.internal=http://oss-cn-hangzhou.aliyuncs.com
-#存档备份时间（时）
+#\u5B58\u6863\u5907\u4EFD\u65F6\u95F4\uFF08\u65F6\uFF09
 ali.oss.backup.time=1
