--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,17 @@
             <version>5.0.3.RELEASE</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.sjhy.platform</groupId>
+            <artifactId>elephant-client</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.9.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
