--- a/elephant-starter/pom.xml
+++ b/elephant-starter/pom.xml
@@ -40,21 +40,27 @@
       <version>1.2.0-SNAPSHOT</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.google.code.gson</groupId>-->
+      <!--<artifactId>gson</artifactId>-->
+      <!--<version>2.8.5</version>-->
+    <!--</dependency>-->
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <!--<dependency>-->
+      <!--<groupId>com.alibaba</groupId>-->
+      <!--<artifactId>fastjson</artifactId>-->
+      <!--<version>1.2.47</version>-->
+    <!--</dependency>-->
 
   </dependencies>
 
   <build>
-    <resources>
-      <resource>
-        <directory>com/sjhy/platform</directory>
-        <filtering>false</filtering>
-      </resource>
-    </resources>
+    <!--<resources>-->
+      <!--<resource>-->
+        <!--<directory>com/sjhy/platform</directory>-->
+        <!--<filtering>false</filtering>-->
+      <!--</resource>-->
+    <!--</resources>-->
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
