--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 # 端口配置
 server:
-  port: 8080
-#  port: 443
-#  ssl:
-#      key-store: classpath:1880511_server.shijunhuyu.com.pfx
-#      key-store-password: mz646fkT
-#      enabled: true
+#  port: 8080
+  port: 443
+  ssl:
+      key-store: classpath:1880511_server.shijunhuyu.com.pfx
+      key-store-password: mz646fkT
+      enabled: true
 
 # spring配置
 spring:
@@ -14,9 +14,11 @@ spring:
     # 数据库配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8
+#    url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/game?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: mv2H)jMs9AFO-gCD
+    password: root
+#    password: mv2H)jMs9AFO-gCD
     name: game
 
 # redis配置
