--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
 #    url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8
-    url: jdbc:mysql://localhost:3306/game?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/game?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
 #    password: mv2H)jMs9AFO-gCD
