--- a/elephant-starter/src/main/resources/application.yml
+++ b/elephant-starter/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 # 端口配置
 server:
-#  port: 8080
-  port: 443
-  ssl:
-      key-store: classpath:1880511_server.shijunhuyu.com.pfx
-      key-store-password: mz646fkT
-      enabled: true
+  port: 8080
+  tomcat:
+    max-threads: 350
+#  port: 443
+#  ssl:
+#      key-store: classpath:1880511_server.shijunhuyu.com.pfx
+#      key-store-password: mz646fkT
+#      enabled: true
 
 # spring配置
 spring:
@@ -14,12 +16,17 @@ spring:
     # 数据库配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8
+#    url: jdbc:mysql://47.92.153.243:3306/game?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    #上线数据库,上线用内网ip连接数据库
+    url: jdbc:mysql://172.26.41.3:3306/game?useUnicode=true&characterEncoding=utf-8&useSSL=false
 #    url: jdbc:mysql://localhost:3306/game?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#    url: jdbc:mysql://47.92.161.255:3306/game?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-#    password: root
-    password: mv2H)jMs9AFO-gCD
+    password: root
+#    password: mv2H)jMs9AFO-gCD
     name: game
+    hikari:
+      maximum-pool-size: 20
 
 # redis配置
   redis:
